# wagtail-components

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  cd.yml  ci.yml  docker-image.yml  ruff.yml
app/: __init__.py
app/api/: __init__.py  apps.py  urls.py
app/api/tests/: __init__.py  test_views.py
app/apps/: __init__.py
app/apps/home/: __init__.py  apps.py  models.py
app/apps/home/migrations/: 0001_initial.py  0002_create_homepage.py
app/apps/home/tests/: __init__.py  test_models.py
app/cms/: __init__.py  apps.py  blocks.py
app/ui/: apps.py  urls.py  views.py
app/ui/locale/ar/LC_MESSAGES/: django.po
app/ui/static/app/: README.md
app/ui/static/app/css/: app.css  styles.css
app/ui/templates/app/: about.html  base.html  contact.html  contact_landing.html  index.html  search.html
app/ui/templates/app/components/: form.html  pagination.html
app/ui/templates/registration/: logged_out.html  login.html
app/ui/templates/rest_framework/: api.html
app/ui/templatetags/: app.py
app/ui/tests/: __init__.py  test_views.py
wagtail_components/: __init__.py
wagtail_components/tempaltes/wagtail/components/: breadcrumbs.html  form.html  messages.html  pagination.html  prev_next.html  title.html  tree.html
